# Carbonite

./: .gitignore  Carbonite.sln  Directory.Build.props  LICENSE.txt  README.md  carbonite.natvis
.github/workflows/: verify-pull-request.yml
Carbonite/: Carbonite.csproj  CarboniteImageHeader.cs  CarboniteImagePageWriter.cs  CarboniteImageWriter.cs  GenerateFreezableAttribute.cs  ICarboniteImagePageWriter.cs  IFreezable.cs
Carbonite.FreezableCodeGen/: Carbonite.FreezableCodeGen.csproj  FreezableSourceGenerator.cs
CarboniteExampleNative/: CMakeLists.txt  ExampleTypes.h  Main.cpp
CarboniteExampleWriter/: CarboniteExampleWriter.csproj  ExampleTypes.cs  Program.cs
Include/carbonite/: carbonite.h
